name:                balloon
version:             0.1.0.0
license-file:        LICENSE
author:              Tran Ma
maintainer:          tran@defma.in
build-type:          Simple
cabal-version:       >=1.10

executable balloon
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8
                     , mwc-random
                     , bytestring
                     , text
                     , thyme
                     , mtl
                     , primitive
                     , statistics
                     , vector-space
                     , lens
                     , old-locale

  default-language:    Haskell2010
  ghc-options:         -O3
                       -fllvm
