name:                balloon
version:             0.1.0.0
license-file:        LICENSE
author:              Tran Ma
maintainer:          tran@defma.in
build-type:          Simple
cabal-version:       >=1.10

executable balloon
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8
                     , array
                     , async
                     , containers
                     , mwc-random
                     , bytestring
                     , free
                     , text
                     , thyme
                     , mtl
                     , primitive
                     , statistics
                     , vector-space
                     , lens
                     , old-locale
                     , unix-time
                     , pipes-text
                     , pipes-bytestring
                     , pipes
                     , pipes-concurrency
                     , pipes-parse
                     , pipes-attoparsec
                     , pipes-safe
                     , foldl
                     , unix
                     , attoparsec
                     , semigroups
                     , errors

  default-language:    Haskell2010
  ghc-options:         -O2
                       -fllvm
                       -Wall
                       -threaded
