name:                balloon
version:             0.1.0.0
license-file:        LICENSE
author:              Tran Ma
maintainer:          tran@defma.in
build-type:          Simple
cabal-version:       >=1.10

executable random
  main-is:             Random.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8
                     , bytestring
                     , errors
                     , lens
                     , mtl
                     , mwc-random
                     , old-locale
                     , primitive
                     , statistics
                     , text
                     , unix-time

  default-language:    Haskell2010
  ghc-options:         -O2
                       -fllvm
                       -Wall

executable balloon
  main-is:             Stats.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8
                     , async
                     , attoparsec
                     , bytestring
                     , containers
                     , errors
                     , lens
                     , mtl
                     , pipes
                     , pipes-attoparsec
                     , pipes-bytestring
                     , pipes-parse
                     , text
                     , unix
                     , optparse-applicative
                     , transformers

  default-language:    Haskell2010
  ghc-options:         -O2
                       -fllvm
                       -Wall
                       -threaded

executable normal
  main-is:             Normalise.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8
                     , attoparsec
                     , bytestring
                     , containers
                     , errors
                     , lens
                     , mtl
                     , transformers
                     , pipes
                     , pipes-attoparsec
                     , pipes-bytestring
                     , pipes-parse
                     , text
                     , unix
                     , optparse-applicative

  default-language:    Haskell2010
  ghc-options:         -O2
                       -fllvm
                       -Wall
                       -threaded